# glitch

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yaml  entrypoint.sh  env_sample  pyproject.toml
.github/workflows/: ci.yaml
src/: main.py
src/cli/: __init__.py  app.py  bot.py  db.py
src/config/: __init__.py  bot.py  const.py  db.py  logger.py  redis.py
src/db/: __init__.py  crud.py  decorators.py  exceptions.py
src/db/migrations/: env.py
src/db/migrations/versions/: 2023_07_30_2116-c2b5c4d9f78b_create_user_table.py  2023_08_06_1137-b64e9cfdbe6e_alter_column_types_for_users.py  2023_09_09_0923-514735b954f2_make_users_telegram_id_as_big_integer.py
src/db/models/: base.py  users.py
src/db/queries/: users.py
src/services/api/: __init__.py  app.py
src/services/api/routers/: __init__.py  gitlab.py
src/services/bot/: __init__.py
src/services/bot/handlers/: __init__.py
src/services/bot/handlers/messages/: __init__.py  general.py
src/services/bot/keyboards/: __init__.py
src/services/bot/routers/: __init__.py
src/services/bot/routers/messages/: __init__.py  general.py
src/services/gitlab/: auth.py  auth.pyi  interface.py  timetracker.py
src/utils/: bot.py  jwt.py
