[tool.poetry]
name = "gitlab-tg-interface"
version = "0.1.0"
description = ""
authors = ["Ruslan <shaggybackend@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
psycopg2-binary = "^2.9.6"
gunicorn = "^21.2.0"
uvicorn = "^0.23.1"
fastapi = "^0.100.0"
requests = "^2.31.0"
pydantic = {extras = ["email"], version = "^2.0.3"}
alembic = "^1.11.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.19"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-dotenv = "^1.0.0"
aiogram = "3.0.0rc1"
loguru = "^0.7.0"
click = "^8.1.6"
python-dateutil = "^2.8.2"
asyncpg = "^0.28.0"
cryptography = "41.0.3"
redis = "^5.0.0"
python-gitlab = "^3.15.0"
pyjwt = "^2.8.0"

[tool.poetry.group.dev.dependencies]
ipython = "^8.14.0"
pre-commit = "^3.3.3"
black = "^23.7.0"
mypy = "^1.4.1"
ruff = "^0.0.280"
flake8 = "^6.0.0"
pytest = "^7.4.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
glitch = "src.cli:cli"

[tool.mypy]
ignore_missing_imports = true
exclude = '''(?x)(
    .*migrations/.*\.py$
)'''

[tool.ruff]
ignore = ["F401", "F403", "F405"]
exclude = [
    "migrations",
    ".direnv",
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".tox",
    ".venv",
    "venv",
    "__pypackages__",
]
line-length = 100

[tool.pytest.ini_options]
addopts = "--nomigrations -x"
testpaths = "src"
norecursedirs = "settings migrations mocks mock"

[tool.isort]
profile = "black"
